--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "axios": "^1.13.4",
     "fetch": "^1.1.0",
+    "jsonwebtoken": "^9.0.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
+    "react-icons-kit": "^2.0.0",
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
